--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B6YFTFW1QQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-B6YFTFW1QQ');
+  </script>
 </body>
 </html>
